# heartsock-server

./: Cargo.toml  build.rs
.cargo/: config.toml
src/: main.rs  mdns-old.rs  mdns.rs  websocket-old.rs  websocket.rs
src/mdns/: mdns_sd.rs  mod.rs  simple_mdns.rs
