[package]
name = "heartsock-server"
version = "0.2.1"
edition = "2021"
build = "build.rs"

[features]
default = ["mdns-sd"]
mdns-sd = ["dep:mdns-sd"]
simple-mdns = ["dep:simple-mdns"]

[package.metadata.winres]
FileDescription = "Heartsock WebSocket Server"
ProductName = "Heartsock Server"

[dependencies]
async-trait = "0.1"
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1"
thiserror = "1"
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
ezsockets = { version = "0.5", features = ["tungstenite"] }
local-ip-address = "0.4"
mdns-sd = { version = "0.7", optional = true }
simple-mdns = { version = "0.4", features = ["async-tokio"], optional = true }
cfg-if = "1"

[target.'cfg(windows)'.build-dependencies]
winres = "0.1"

[profile.release]
lto = "thin"
codegen-units = 1
